latest update superblocks